changed meetings logic